force-app/main/default/objects/Peak_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stack Trace</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Error-{00000}</displayFormat>
        <label>Peak Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>